
~~~~~~~~~
- v6.?.?:
~~~~~~~~~
- Using unified entry points on Windows for P/Invoke calls both for .NET Framework and .NET/Core platforms. This
  helps to avoid issues when a .NET Framework build is executed on .NET/Core (should not occur when using package
  references but may happen when developing VisualStudio extensions).

~~~~~~~~~
! v6.0.0:
~~~~~~~~~

! Assembly changes:
===================
! Updating System.Drawing.Common version to 6.0.0. If targeting .NET 5.0 or later, then on non-Windows systems this
  might be a breaking change. See the description of the DrawingModule.Initialize method for details.
* Updating KGySoft.CoreLibraries version

! KGySoft.Drawing namespace:
============================
! ImageExtensions class:
  ! The SaveAsGif methods from mow on use the new GifEncoder class. The behavior is functionally equivalent with the
    previous versions but the actual produced stream can be different.
  + New SaveAsAnimatedGif methods
  + New SaveAsMultipageTiff overload
* DrawingModule class: On non-Windows Systems the module initializer enables using System.Drawing types that depend
  on native GDI+ calls.

! KGySoft.Drawing.Imaging namespace:
====================================
! IBitmapData interface:
  ! New IsDisposed property (this is a breaking change only if you have 3rd party IBitmapData implementations)
+ BitmapDataExtension class:
  + New Clip overloads to be able to specify whether the underlying bitmap data should be diposed when the returned
    instance is disposed.
+ Palette class:
  + New indexer (same as the GetColor method)
+ New GifEncoder class to be able to save GIF images without a system encoder, even animated ones
+ New GifGraphicsDisposalMethod enum
+ New GifCompressionMode enum


~~~~~~~~~
* v5.3.1:
~~~~~~~~~

* Assembly changes:
===================
* Members are annotated for using C# 8.0 nullable references
* The module initializer initializes the resources.
+ Targeting also .NET 5.0

* KGySoft.Drawing namespace: